plugins {
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
    id 'application'
}

group = 'com.capstone'
version = '0.0.1'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

application {
    mainClass = "com.capstone.Application"
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
}

jar.enabled = false

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.apache.spark:spark-sql_2.12:3.5.0'
    implementation 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
}

tasks.withType(JavaExec) {
    jvmArgs += [
            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
            '--add-opens=java.base/java.nio=ALL-UNNAMED'
    ]
}